Fix problem in delete message