@@ -8,9 +8,10 @@ import java.rmi.server.UnicastRemoteObject;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledThreadPoolExecutor;
 
-// make in root:
-// javac -d out com/assigment_1/Protocol/*.java
-// javac -d out com/assigment_1/*.java
+// make in src:
+// export PATH_TO_FX=/home/filipasenra/openjfx-11.0.2_linux-x64_bin-sdk/javafx-sdk-11.0.2/lib
+// javac --module-path $PATH_TO_FX --add-modules javafx.controls -d out com/assigment_1/Protocol/*.java
+// javac --module-path $PATH_TO_FX --add-modules javafx.controls  -d out com/assigment_1/*.java
 // in out:
 //rmiregistry &
 //java com.assigment_1.PeerClient 2.0 1 Peer1 224.0.0.15 8001 224.0.0.16 8002 224.0.0.17 8003
